force-app/main/default/objects/KPI_Config__mdt/fields/KPI_Enable_Outliers__c.field-meta.xml
<CustomField>
    <fullName>KPI_Enable_Outliers__c</fullName>
    <label>Enable Outliers</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Enable outlier detection and analysis features</description>
</CustomField>