force-app/main/default/objects/KPI_Config__mdt/fields/KPI_IQR_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KPI_IQR_Multiplier__c</fullName>
    <label>IQR Multiplier</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
    <defaultValue>1.5</defaultValue>
    <description>IQR multiplier for outlier detection (default 1.5)</description>
</CustomField>