force-app/main/default/objects/KPI_Config__mdt/fields/KPI_MaxRows__c.field-meta.xml
<CustomField>
    <fullName>KPI_MaxRows__c</fullName>
    <label>Max Rows</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>2000</defaultValue>
    <description>Maximum number of rows to process for outlier analysis</description>
</CustomField>