force-app/main/default/objects/KPI_Config__mdt/fields/KPI_ZScore_Threshold__c.field-meta.xml
<CustomField>
    <fullName>KPI_ZScore_Threshold__c</fullName>
    <label>Z-Score Threshold</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
    <defaultValue>2.5</defaultValue>
    <description>Z-score threshold for outlier detection (default 2.5)</description>
</CustomField>